// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Carousel /> by default on desktop matches with snapshot 1`] = `
<div
  className="carousel__FlexContainer-sc-1o67jdh-0 cYidMx"
>
  <div
    className="carousel-inner__StyledCarouselInner-wljpd2-0 ffDrrB"
    onScroll={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="carousel-inner__StyledCarouselPageContainer-wljpd2-1 ddDhFH"
      onClick={[Function]}
    >
      <div
        className="carousel-page__StyledPage-sc-12ynwqa-0 bKxLtX"
      >
        <div
          className="carousel-page__StyledItem-sc-12ynwqa-1 htAxIJ"
        >
          <div
            className="k-ProjectCard k-Card k-Card--light"
            href={null}
            title={null}
          >
            <div
              className="k-ProjectCard__grid"
            >
              <div
                className="marger__StyledMarger-q3lecu-0 jizFlm k-ProjectCard__grid--flex"
              >
                <span
                  className="k-ButtonImage k-ButtonImage--withoutPointerEvents"
                  tabIndex={null}
                >
                  <img
                    alt=""
                    className="k-ButtonImage__img"
                    src={null}
                  />
                </span>
                <p
                  className="k-Paragraph k-ProjectCard__grid--flex__item-fluid k-u-margin-left-single k-u-margin-right-single k-Paragraph--quaternary k-Paragraph--withoutMargin k-Paragraph--normalLineHeight"
                >
                  <span
                    className="k-u-weight-regular"
                  >
                    Name
                  </span>
                </p>
              </div>
              <div
                className="marger__StyledMarger-q3lecu-0 dtnuLs k-ProjectCard__grid--flex"
              >
                <p
                  className="k-Title k-ProjectCard__grid--flex__item-fluid k-Card__title k-Title--senary k-Title--withoutMargin"
                >
                  A
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          className="carousel-page__StyledItem-sc-12ynwqa-1 bdXrGE"
        />
        <div
          className="carousel-page__StyledItem-sc-12ynwqa-1 bdXrGE"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Carousel /> by default on mobile matches with snapshot 1`] = `
<div
  className="carousel__FlexContainer-sc-1o67jdh-0 cYidMx"
>
  <div
    className="carousel-inner__StyledCarouselInner-wljpd2-0 ffDrrB"
    onScroll={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="carousel-inner__StyledCarouselPageContainer-wljpd2-1 ddDhFH custom-class"
      onClick={[Function]}
    >
      <div
        className="carousel-page__StyledPage-sc-12ynwqa-0 bKxLtX"
      >
        <div
          className="carousel-page__StyledItem-sc-12ynwqa-1 htAxIJ"
        >
          <div
            className="k-ProjectCard k-Card k-Card--light"
            href={null}
            title={null}
          >
            <div
              className="k-ProjectCard__grid"
            >
              <div
                className="marger__StyledMarger-q3lecu-0 jizFlm k-ProjectCard__grid--flex"
              >
                <span
                  className="k-ButtonImage k-ButtonImage--withoutPointerEvents"
                  tabIndex={null}
                >
                  <img
                    alt=""
                    className="k-ButtonImage__img"
                    src={null}
                  />
                </span>
                <p
                  className="k-Paragraph k-ProjectCard__grid--flex__item-fluid k-u-margin-left-single k-u-margin-right-single k-Paragraph--quaternary k-Paragraph--withoutMargin k-Paragraph--normalLineHeight"
                >
                  <span
                    className="k-u-weight-regular"
                  >
                    Name
                  </span>
                </p>
              </div>
              <div
                className="marger__StyledMarger-q3lecu-0 dtnuLs k-ProjectCard__grid--flex"
              >
                <p
                  className="k-Title k-ProjectCard__grid--flex__item-fluid k-Card__title k-Title--senary k-Title--withoutMargin"
                >
                  A
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          className="carousel-page__StyledItem-sc-12ynwqa-1 fXrLHN"
        />
        <div
          className="carousel-page__StyledItem-sc-12ynwqa-1 fXrLHN"
        />
      </div>
    </div>
  </div>
</div>
`;
